# ecoci

./: .gitignore  CLAUDE.md  LICENSE  action.yml
.github/workflows/: container-build.yml  green-ci-measure.yml  test-action.yml
.github/workflows-disabled/: cli-build.yml  container-build.yml  deploy-staging.yml
adr/: 0001-mono-repo-structure.md  0002-cli-tech-stack-choice.md  0003-cli-python-venv-implementation.md  0004-devops-infrastructure-choices.md  0005-auth-api-tech-stack-choice.md  0005-badge-service-tech-stack.md  template.md
auth-api/: .env.example  Makefile  README.md  go.mod  openapi.yaml
auth-api/cmd/server/: main.go
auth-api/internal/api/: handlers.go  handlers_test.go  server.go
auth-api/internal/auth/: jwt.go  jwt_test.go  oauth.go
auth-api/internal/config/: config.go
auth-api/internal/db/: connection.go  migrate.go  models.go
auth-api/internal/middleware/: auth.go  rate_limit.go  security.go
auth-api/internal/service/: repository.go  run.go  user.go  user_test.go
auth-api/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
badge-service/: .coverage  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
badge-service/badge_service/: __init__.py  database.py  main.py  models.py  svg_generator.py
badge-service/tests/: __init__.py  conftest.py  test_badge_api.py  test_badge_api_simple.py  test_database.py  test_svg_generator.py
cli/: .coverage  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cli/src/green_ci/: __init__.py  cli.py  measurement.py  schema.py
cli/src/green_ci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/tests/: __init__.py  test_cli.py  test_measurement.py  test_schema.py
devops/: .gitignore  README.md
devops/k8s/base/: namespace.yaml  service-account.yaml
devops/k8s/staging/: auth-api.yaml  badge-service.yaml  monitoring.yaml
devops/scripts/: deploy.sh  setup-backend.sh
devops/terraform/: main.tf  outputs.tf  variables.tf
devops/terraform/environments/staging/: main.tf  outputs.tf
devops/terraform/modules/dns/: main.tf  outputs.tf  variables.tf
devops/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
devops/terraform/modules/security/: main.tf  outputs.tf  variables.tf
devops/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
